--- a/View/HTML/admin.html
+++ b/View/HTML/admin.html
@@ -13,6 +13,7 @@
     <button onclick="account()" id="account" class="green-hover">ACCOUNT</button>
     <button onclick="yourdata()" id="yourdata" class="green-hover">YOUR DATA</button>
 	<button onclick="admin()" id="admin" class="green-hover">ADMIN</button>
+    <button onclick="window.location.href='../HTML/about.html'" class="green-hover">ABOUT</button>
 	<button id="username" class="username" ></button>
 </div>
 
