--- a/View/HTML/page.html
+++ b/View/HTML/page.html
@@ -11,7 +11,7 @@
     <button onclick="clasament()" id="clasament" class="green-hover">CLASAMENT</button>
     <button onclick="account()" id="account" class="green-hover">ACCOUNT</button>
     <button onclick="yourdata()" id="yourdata" class="green-hover">YOUR DATA</button>
-	<button onclick="window.location.href='../HTML/about.html'" class="green-hover">ABOUT</button>
+	<button onclick="location.href='about.html'" class="green-hover">ABOUT</button>
 	<button id="username" class="username"></button>
 </div>
 
