--- a/View/HTML/about.html
+++ b/View/HTML/about.html
@@ -6,41 +6,55 @@
 </head>
 <body>
   <h1>Workout Web Generator</h1>
-  <h2> Development authors :</h2>
-  <h3> - Stoleriu Denis-Matei<br><br> - Cioborariu Dumitru</h3>
-  <p class="p-title">1. The database scheme</p>
+  <h2>Scholarly HTML</h2>
+  <ul>
+    <li><a href="#authors">1. Authors</a></li>
+    <li><a href="#introduction">2. Introduction</a></li>
+    <li><a href="#purpose">3. Purpose</a></li>
+    <li><a href="#description">4. General description</a></li>
+    <li><a href="#features">5. Product features</a></li>
+    <li><a href="#interface">6. Application Interface</a></li>
+    <li><a href="#tech">7. Technologies for Protection and Security</a></li>
+     <li><a href="#bibl">8. Bibliography</a></li>
+  </ul>
+
+  <h3 id="authors">1. Development authors :</h3>
+  <p>  Stoleriu Denis-Matei (2B3) & Cioborariu Dumitru (2B3)</p>
+  <h3 id="introduction">2. Introduction</h3>
+  <p>* <strong>Database Diagram</strong></p>
   <img src="../database_schema.png" alt="Database scheme">
-  <p class="p-title">2. C4 Diagram</p>
-  <img src="../c4diagram.png" alt="Database scheme">
-  <p class="p-title">3. Purpose</p>
+  <p>* <strong>C4 Diagrams</strong></p>
+  <img src="../level1diagram.png" alt="C4 diagram">
+  <img src="../c4diagram.png" alt="C4 diagram">
+  <h3 id="purpose">3. Purpose</h3>
   <p>This application generates a workout based on certain user data. The user can choose their location, but also which muscle groups to work.
      The application also allows a ranking <br>of the most active users, but also a data flow for each user.
      The audience of this application are people of all ages, offering them support to have a healthier and longer life.</p>
-  <p class="p-title">4. General description</p>
+  <h3 id="description">4. General description</h3>
   <p>Workout Web Generator is a web application, designed to easily generate an workout depending on your preferences.</p>
   <p> The application is structured on four main components:</p>
   <p>- Web interface (frontend) - built with fundamental technologies (HTML, CSS AND Javascript)</p>
   <p>- Backend - PHP for application logic and code organised in MVC (Model - View - Controller)</p>
   <p>- Relational database - MySQL for users data</p>
   <p>- Local Server - XAMMP</p>
-  <p class="p-title">5. Product features</p>
+  <h3 id="features">5. Product features</h3>
   <p>- customized location (home, gym, calisthenics)</p>
   <p>- generates workout for a specific muscle group</p>
   <p>- detailed clasaments available for users</p>
   <p>- RSS news fluxe available for individual stats for users</p>
   <p>- workout depending on your health condition</p>
-  <p class="p-title">6. Application interface</p>
+  <h3 id="interface">6. Application interface</h3>
   <p>Home page <br><br> * The home page welcome users with a clear section and quick links to key functions</p>
   <img src="../homepage.png" alt="Homepage">
   <p>Exercices page <br><br> * Here are the exercises generated depending on your preferences</p>
   <img src="../exercices.png" alt="Exercices">
   <p>Account page <br><br> * Profile info shows user details</p>
   <img src="../account.png" alt="account">
-  <p class="p-title">7. Technologies for protection and security</p>
+  <h3 id="tech">7. Technologies for protection and security</h3>
   <p>- The application will encrypt the user's password before storing it in the database</p>
   <p>- Passwords are hashed with Bcrypt</p>
   <p>- The application is using prepared statements to prevent SQL injection</p>
-  <p class="p-title">8. Bibliography</p>
+  <h3 id="bibl">8. Bibliography</h3>
   <p>https://www.geeksforgeeks.org/php/how-to-get-the-base-url-with-php/</p>
   <p>https://www.w3schools.com/php/php_cookies.asp</p>
   <p>https://www.w3schools.com/jsref/api_fetch.asp</p>
